syntax = "proto3";

package emotech_service;

service Service {
  rpc SendData(DataRequest) returns (DataResponse);
}

message DataRequest {
  oneof input {
    string string_data = 1;
    int32 number_data = 2;
    bytes file_data = 3;
  }
}

message DataResponse {
  bool ok = 1;
}
